--- a/test.tex
+++ b/test.tex
@@ -524,6 +524,51 @@ Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the d
 $$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
 with $\mu$ and $tau$ the (normalised to electron) masses of the heavy leptons (Section 9.5). This implies a geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm: $\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
 
+In the hypothesis of an Arithmetical Cosmos, the ultimate equations must be diophantine. The
+simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are 
+co-prime, by:
+\begin{equation}
+T^{2} = L^{3} = n^{6}
+\end{equation}
+where n is a whole number, showing the classical 6D phase-space of point mechanics. Considering the exponents, this particularizes the usual 3D space, but attributes 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
+
+\textit{This is the degenerate arithmetic form of the 2D-3D holographic principle}.
+
+This is \textit{also} the third Kepler's law. It was the simplest one of his three laws, and the realization of his research of harmony. Indeed, its Diophantine form says more: it gives $L = n^{2}$, \textit{the orbit law in the Hydrogen atom and in our Gravitational Molecule model}, where the visible Universe corresponds only to the first orbital. This suggests at once the existence of a Grandcosmos. 
+
+Before the super-period was reckognized, the first version of the Topological axis \cite{Sanchez1} showed an overall dis-symmetry. This was another sign for the Grandcosmos existence.   Now, this corresponds to d = 30, the natural extension of the above Diophantine equation:
+\begin{equation}
+T^{2} = L^{3} = M^{5} = n^{30}
+\end{equation}
+where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the $5^{th}$ power of its mass. This holic dimension 30 is the touchstone of the Topological axis, from which the gauge bosons are deduced by Bott reductions [19] (Fig. 1).
+
+This is called the Holic Principle, but limited to \textit{the apparent MLT world only}. The Complete Holic
+Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. This is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
+
+\begin{equation}
+R/\lambdabar_{e} \approx s_4^5 \approx f(26)/6 \approx \Gamma^{28}/5 \approx (2/\delta)^{210}
+\end{equation}
+where $s_4 = 2\pi^2 a^3$ is the area of the 4-sphere of radius $a$ and $\Gamma$, the Atiyah constant (section 8.3). Moreover (0.1 \%, 0.03 \% and 0.9 \%):
+\begin{equation}
+2/\delta = 2R/R^{\prime} \approx lnp/lna \approx lna/ln\Gamma \approx ln\Gamma/lnf
+\end{equation}
+where $f$ is the inverse strong coupling constant (section 8.3). This  confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm: $\delta \approx e^{2/e^2}$. This implies a geo-combinatorial relation between $a$ and $p$:
+\begin{equation}
+ p^{(p^{2})} \sim (a^{2})^{(a^{3})}   
+\end{equation}
+showing a symmetry between basic powers of $a$ and $p$. The consequences of the appearance of $\Gamma$\ in the above equation will appear in section 8.3. 
+
+
+
+
+
+
+
+
+
+
+
+
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The special holographic relations}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
