--- a/test.tex
+++ b/test.tex
@@ -507,25 +507,6 @@ confirms the above Planck's wall breakdown.
 
 In the hypothesis of an Arithmetical Cosmos, the ultimate equations must be diophantine. The
 simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are 
-co-prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, showing the classical 6D phase-space of point mechanics. Considering the exponents, this particularizes the usual 3D space, but attributes 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
-
-\textit{This is the degenerate arithmetic form of the spatio-temporal holographic principle}.
-
-This is also the third Kepler's law, but its diophantine form gives $L = n^{2}$, the orbit law in the Hydrogen atom and in our
-Gravitational Molecule model, where the visible Universe corresponds only to the first orbital. This suggests at once the existence of a Grandcosmos. This is also induced by the overall symmetry of the Topological Axis, which, moreover, favors the
-dimension n = 30, the natural extension of the above diophantine equation:
-\begin{equation}
-T^{2} = L^{3} = M^{5} = N^{30}
-\end{equation}
-where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the $5^{th}$ power of its mass. This holic dimension 30 is the touchstone of the Topological axis, from which the gauge bosons are deduced by Bott reductions [19] (Fig. 1).
-
-This is called the Holic Principle, but limited to \textit{the apparent MLT world}. The Complete Holic
-Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. This is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
-$$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
-with $\mu$ and $tau$ the (normalised to electron) masses of the heavy leptons (Section 9.5). This implies a geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm: $\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
-
-In the hypothesis of an Arithmetical Cosmos, the ultimate equations must be diophantine. The
-simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are 
 co-prime, by:
 \begin{equation}
 T^{2} = L^{3} = n^{6}
@@ -657,6 +638,106 @@ Thus, precising the relation $a_w/WZ \approx \sqrt{a}$ known (0.1 \%) in Particl
 \begin{equation}
 137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
 \end{equation}   
+
+
+
+
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+\section{The special holographic relations}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+
+The holographic technique, based on the properties of a coherent wave, is by far the most efficient way to treat huge information, in particular in optics \cite{Grosmann}. Now, the main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been proposed (section 4.2).
+
+The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam upon a photo-sensible area of $0.6~ m^2$. The emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^{15}$ bit, obtained in 12 minutes of scanning exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations were indeed found, and its arithmetical form, the Holic Principle was presented at ANPA 16 (Cambridge, 1994) \cite{Sanchez4}. 
+
+In Sept. 1997, the Orsay University attributes a sabbatical year, giving time to reexamine the foundation of cosmology. \textit{In the three first minutes, the half-radius of visible Universe was obtained}. After several weeks, the scanning holography of section 3 was established. After rejection by the Orsay university and Paris Academy, this was put in March 1998 in a closed draft in the Acad\'{e}mie des Sciences de Paris, under the title \textit{ 'L'Univers conserve-t-il l-information ?'}.
+
+Strangely enough, when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists holography. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal 1D holography was proposed in the first author's thesis as soon as 1975. 
+
+While the standard Holographic Principle is limited to using the Plank area, it is natural to suppose that they are other holographic units. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here three more confirmations. 
+
+\subsection{The Conservation of Information}
+
+The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an holographic
+relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}) \approx 4.965114245)$ (to $0.01\%$):
+\begin{equation}
+4\pi(R^{\prime}/l_{CMB})^{2} \approx e^{a}
+\end{equation}
+Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
+thermal character. But \textit{in a totally deterministic cosmos, there is no paradox}. This question is
+connected with the black hole information paradigm \cite{Preskill}. Independently of our approach, an
+argument in favor of a total conservation of information was tied to a non-evolution cosmology
+\cite{Nikolic}. 
+
+Note that \textit{$e^{a}$ is also compatible with the half volume of the proton, with
+the Planck length as unit}.
+
+So, while General Relativity and Quantum physics disagree about the nature of Space-Time, especially the non-locality phenomena, they agree for complete determinism, leading to \textit{the definitive rejection of the
+Copenhagen statistical interpretation}. 
+
+The Wien wavelength enters (0.03 \%):
+\begin{equation}
+l_{CMB} / \lambdabar_e \approx P/pH a^3
+\end{equation}
+confirming that the cosmic temperature is invariant. 
+
+\subsection{The Cosmic Temperature}
+
+In the gravitational hydrogen molecule model \cite{Sanchez1}, $R$ is defined by the following 1D-2D Special
+Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appears in the logical extension, the 3D term involving the molecular Hydrogen wavelength:
+\begin{equation}
+2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
+\end{equation}
+The above relation gives $T_{CMB} \approx 2.73 K$. With the measured temperature of the cosmic
+background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
+This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin. Recall
+that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
+the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137 (section 8.2):
+\begin{equation}
+2^{2^{{2^{2^2 - 1}-1}}-1}-1 = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2   
+\end{equation}}
+which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $. This proves the relevance of
+the Lenz-Wyler approximation for the Proton/Electron mass ratio $p_0 = 6\pi^{5}$, (section 9.2). 
+%\begin{equation}
+%2^{2^{{2^{2^2 - 1}-1}}-1}-1
+%\end{equation}
+
+\subsection{The Holic Principle and CCO}
+
+The sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius is the Grandcosmos hologram (section 3). Its HB entropy writes: $\pi (R^{\prime}/l_P)^2 = (\pi /2)(R^{\prime}/r_e)^3 $, i.e. with a wrong geometric coefficient. However, the HB entropy of the visible Universe shows a nearly geometric term, with imprecision $\sqrt{4/3\delta} \approx 1.17$:
+\begin{equation}
+\pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3 
+\end{equation}
+which is a holographic conservation in \textit{the half-sphere of the visible universe}. By analogy with the above scanning process filling the whole sphere (section 3), the above Kotov length $l_k$ (section 4.3) permits to introduce two holographic relations, involving the whole sphere (0.90 \% and 2.6 \%):
+\begin{equation}
+\pi(R/l_K)^2 \approx 2\pi l_K/r_e 
+\end{equation}
+\begin{equation}
+(4\pi/3)(R/l_K)^3 \approx 4\pi (r_e/l_P)^2 
+\end{equation}
+The deviation of the first relation is very close to that of the relation $R_1^3 \approx R_{GC}^2 \lambdabar_M$ inducing, to 17 ppm (identified in Eq. () as $np^2/H^2\sqrt{pH}$ to 0.3 ppm) and 0.1\%: 
+\begin{equation}
+ (R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}/ln2
+\end{equation}
+showing a holic form, involving the Muon/Electron mass ratio $\mu$ (see section 9.5).
+Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^3/(R_{GC}l_P)^2$, this leads to:  (above 17 ppm and 1.8 ppm) :
+\begin{equation}
+r_e/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
+\approx (5/4)^2 \mu ^{35} \end{equation}
+with the Koide-Sanchez constant $p_K$, characteristic of the two heavy leptons (section 9.5).
+The above term $R_1l_K/R^{\prime}r_e$ is close to (1\%) $\sqrt{O_M} \approx 2a^2P$ (0.18 \%). The study of deviations shows the intermediate bosons ratios $W$ and $Z$, with values specified to the ppb range in section 9.4, leading to (-4 and 3.5 ppm, 0.3\%):
+\begin{equation}
+O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
+\end{equation}
+\begin{equation}
+ (F^3R_1 / 2 a^3R^{\prime})^2 \approx Z^4 (a/137)(p_0/p)^2
+\end{equation}
+This precises the relation $a_w/WZ \approx \sqrt{a}$ known (0.1 \%) in Particle Theory (0.3 and -0.4 ppm)
+\begin{equation}
+137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
+\end{equation}   
+Thus, in first approximation $(e^{-1/4a} \approx ~0.036 ~\%)$, the square root of the Monster order is the ratio of the Rydbergh wavelength to the Planck length.
+
 
 
 
