--- a/test.tex
+++ b/test.tex
@@ -695,7 +695,7 @@ that $2^{127} - 1$ is the most famous prime number in the history of Mathematics
 the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137 (section 8.2):
 \begin{equation}
 2^{2^{{2^{2^2 - 1}-1}}-1}-1 = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2   
-\end{equation}}
+\end{equation}
 which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $. This proves the relevance of
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p_0 = 6\pi^{5}$, (section 9.2). 
 %\begin{equation}
