--- a/test.tex
+++ b/test.tex
@@ -554,98 +554,6 @@ showing a symmetry between basic powers of $a$ and $p$. The consequences of the 
 \section{The special holographic relations}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-The holographic technique, based on the properties of a coherent wave is by far the most efficient way to treat huge information, in particular in optics \cite{Grosmann}. Now, the main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been proposed (section 4.2).
-
-The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam upon a photosensible area of $0.6 m^2$. The argentic emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^{15}$ bit, obtained in 12 minutes of scanning exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations were indeed found, and its arithmetical form, the Holic Principle was presented at ANPA 16 (Cambridge, 1994) \cite{Sanchez4}. In Sept. 1997, the Orsay University attributes a sabbatical year, giving time to reexamine the foundation of cosmology. \textit{In the three first minutes, the half-radius of visible Universe was obtained}. After several weeks, the scanning holography of section 3 was established. After rejection by the Orsay university and Paris Academy, this was put in March 1998 in a closed draft in the Acad\'{e}mie des Sciences de Paris, under the title \textit{ 'L'Univers conserve-t-il l-information ?'}.
-
-Strangely enough, when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists in this domain. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal 1D holography was proposed in the first author's thesis as soon as 1975. While the standard Holographic Principle is limited to using the Plank area. However, it is natural to suppose that they are other holographic wavelengths. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here three more confirmations. 
-
-\subsection{The Conservation of Information}
-
-The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an overwhelming holographic
-relation with the CMB Wien wavelength $l_{CMB} = hc/kTw $, with $w = 5 (1-e^{-w}) \approx 4.965114245)$ to $0.01\%$:
-\begin{equation}
-4\pi(R^{\prime}/l_{CMB})^{2} \approx e^{a}
-\end{equation}
-Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
-thermal character. But \textit{in a totally deterministic cosmos, there is no paradox}. This question is
-connected with the black hole information paradigm \cite{Preskill}. Independently of our approach, an
-argument in favor of a total conservation of information was tied to a non-evolution cosmology
-\cite{Nikolic}. 
-
-Note that \textit{$e^{a}$ is also compatible with the half volume of the proton, with
-the Planck length as unit}.
-
-So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, especially the non-locality phenomena, they agree for complete determinism, leading to the definitive rejection of the
-Copenhagen statistical interpretation. 
-
-The Wien wavelength enters (0.03 \%):
-\begin{equation}
-l_{CMB} / \lambdabar_e \approx P/pH a^3
-\end{equation}
-confirming the invariance of the cosmic temperature. 
-
-\subsection{The Cosmic Temperature}
-
-In the gravitational hydrogen molecule model \cite{Sanchez1}, $R$ is defined by the following 1D-2D Special
-Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appears in the logical extension, the 3D term involving the molecular Hydrogen wavelength:
-\begin{equation}
-2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
-\end{equation}
-The above relation gives $T_{CMB} \approx 2.73 K$. With the measured temperature of the cosmic
-background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
-This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin:
-$$2^{2^{{2^{2^2 - 1}-1}}-1}-1 = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
-which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
-the Lenz-Wyler approximation for the Proton/Electron mass ratio $p_0 = 6\pi^{5}$, (see Section 9.2). Recall
-that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
-the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137:
-%\begin{equation}
-%2^{2^{{2^{2^2 - 1}-1}}-1}-1
-%\end{equation}
-
-\subsection{The Holic Principle and CCO}
-
-The sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius is the Grandcosmosn hologram (section 3). Its HB entropy writes: $\pi(R^{\prime}/l_P)^2 = (pi/2)(R^{\prime}/r_e)^3 $, i.e. with a wrong geometric coefficient. However, the HB entropy of the visible Universe shows a nearly geometric term, with imprecision $\sqrt{4/3\delta} \approx 1.17$:
-\begin{equation}
-\pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3 
-\end{equation}
-which is a holographic conservation concerning \textit{the half-sphere of the visible universe}. By analogy with the above scanning process filling the whole sphere (section 3), the above Kotov length $l_k$ (section 4.3) permits to introduce two holographic relations, involving the whole sphere (0.90 \% and 2.6 \%):
-\begin{equation}
-\pi(R/l_K)^2 \approx 2\pi l_K/r_e 
-\end{equation}
-\begin{equation}
-(4\pi/3)(R/l_K)^3 \approx 4\pi (r_e/l_P)^2 
-\end{equation}
-
-The deviation of Eq. (27) is very close to that of the relation $R_1^3 \approx R_{GC}^2 \lambdabar_M$ inducing, to 17 ppm (identified in Eq. (10) as $np^2/H^2\sqrt{pH}$ to 0.3 ppm) and 13 ppm: 
-\begin{equation}
- (R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
-\end{equation}
-showing a holic form, involving the Muon/Electron mass ratio $\mu$ (see section 9.5).
-Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a reduction in the ratio $\delta^3$. Moreover, its fourth root shows the Koide-Sanchez constant $p_K$, characteristic of the two heavy leptons (section 9.5) (above 17 ppm and 1.8 ppm) :
-\begin{equation}
-r_e/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
-\end{equation}
-The above term $R_1l_K/R^{\prime}r_e$ is close to (1\%) $\sqrt{O_M} \approx 2a^2P$ (0.18 \%). The study of deviations shows the intermediate bosons ratios $W$ and $Z$, with values specified to the ppb range in section 9.4, leading to (-4 and 3.5 ppm):
-\begin{equation}
-O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
-\end{equation}
-\begin{equation}
- (F^3R_1 / 2 a^3R^{\prime})^2 \approx Z^4 (a/137)(p_0/p)^2
-\end{equation}
-Thus, precising the relation $a_w/WZ \approx \sqrt{a}$ known (0.1 \%) in Particle Theory (0.3 and -0.4 ppm)
-\begin{equation}
-137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
-\end{equation}   
-
-
-
-
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-\section{The special holographic relations}
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-
 The holographic technique, based on the properties of a coherent wave, is by far the most efficient way to treat huge information, in particular in optics \cite{Grosmann}. Now, the main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been proposed (section 4.2).
 
 The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam upon a photo-sensible area of $0.6~ m^2$. The emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^{15}$ bit, obtained in 12 minutes of scanning exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations were indeed found, and its arithmetical form, the Holic Principle was presented at ANPA 16 (Cambridge, 1994) \cite{Sanchez4}. 
@@ -737,6 +645,302 @@ This precises the relation $a_w/WZ \approx \sqrt{a}$ known (0.1 \%) in Particle 
 137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
 \end{equation}   
 Thus, in first approximation $(e^{-1/4a} \approx ~0.036 ~\%)$, the square root of the Monster order is the ratio of the Rydbergh wavelength to the Planck length.
+
+
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+\section{The role of Intermediary Mathematical Constants}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+
+\subsection{The electrical constant $a$}
+The electrical constant $a$ characterizes the Coulomb force between two $l$-distant elementary charges at rest:
+\begin{equation}
+F_{qq} =\hbar c/al^{2}    
+\end{equation}
+Since any electrical charge is a whole multiple of unitary charge $q$ (a relativistic invariant), \textit{any electrical force depends only of the above constants and whole numbers}. Hence, it is logical that $a$ appears central in Atomic Physics and in many fine-tuning relations \cite{Carr}.
+
+However, theorists focused on one property only, the appearance of its fifth power in the Hydrogen hyper-fine spectra, calling its inverse $\alpha$, the `fine-structure constant'. 
+
+Many researchers looked for the mathematical origin of $a$. In quantum electrodynamics,$\sqrt{a}$ is connected with the Electron magnetic abnormal factor, which is very precisely measured\cite{Tanabashi}: $$d_e \approx 1.00115965218076(27)$$
+It is readily seen that $\sqrt{a} \approx exp(\pi/2)^2$. From $i = e^{(i\pi /2)}$, this writes $i^{-lni}$ and the study of deviation leads to, with $a_e = a/d_e$ (29 ppb):
+\begin{equation}
+ i^{-lni}/\sqtr{d_e} \approx (\sqrt{a_e} + 1/\sqrt{a_e})^2    
+\end{equation}
+The slight deviation is not a valid objection, since \textit{Nature must use rational approximations for $\pi$}. Indeed, the fractional development for the corresponding $\pi$ value is 3,7,15,1,$(\(\tau/\mu)^2$, with $\mu$ and $\tau$ the normalised masses of the heavy leptons.
+
+The standard model is unable to explain the three families of particles. Thus, the study of the muon and tau mass ratios is crucial. One observes (1 ppm, 56 ppm, 0.06 \%):
+\begin{equation}
+2/\delta \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu\approx d_e^2 lns/ln\tau
+\end{equation}
+where $s$ is the Higgs ratio (Section 9).
+The following Koide relation \cite{Koide}, \textit{ which has a mathematical justification in term of circulant matrix} \cite{Brannen}, correctly predicted $\tau$ at an epoch (around 2000) during which its measurement was false to 3 $\sigma$. It writes:
+\begin{equation}
+(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
+\end{equation}
+This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of the present Particle Physics standard.
+This Koide-Sanchez constant, $p_K \approx 1842.604994$, was detected in Eq. (), leading to (2 and 0.16 ppm):
+\begin{equation}
+p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 137a/136(a^{\prime}-1) d_e
+\end{equation}
+with $a^{\prime} = r_H/\lambdabar_e = aH/p$. The pertinence of the numbers 136 and 137 is shown in the following.
+
+
+\subsection{The Eddington's constant 137}
+
+The initial Eddington's proposal for $a$ was the whole number 136, being the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137\cite{Eddington}, a prime number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a singular prime in the series of the maximal primes appearing in the numerator of the harmonic
+series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed: $137 = 11^{2} + 4^{2}$, while, as seen above: $11/4 = (\theta_{CMB}/\theta_{CNB})^{3}$.
+
+Since Riemann series are tied to the prime number distribution, it seems odd and incredible that mathematicians
+have not point out the primes appearing in the harmonic series since it is the single Riemann pole. It seems
+that the basic precept \textit{all occurs in the pole} was forgotten in this case. 
+
+As ancient Egyptians used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
+$S_{5} = 137/60$. Indeed it appears in the Ptolemaic approximation for $\pi$: $\pi_{Pt} = 377/120 = 2 +  S_{5}/2$.
+
+It is strange that Eddington's Theory was rejected as soon as $a$ appeared to deviate from 137. Indeed, the
+following shows that \textit{137 plays a central role in ppb fine-tuning analysis}. 
+
+
+One may interpret 137 + 1 as
+the sum of the numbers of dimensions in the Topological Axis \cite{Sanchez1}, taking into account the double
+point (H atom-Pion couple) for the super-string value d = 10, and the remarkable sum:
+\begin{equation}
+\sum_{k=7}^{k=0}(4 k + 2) = 2^{7}
+\end{equation}
+So $137 = 2^{7} - 1 + 3 + 7$, i.e. the Combinatorial Hierarchy form \cite{Sanchez1}. But this appears also as 137 = 135 + 2, showing the string dimension 2. Indeed, one obtains the value $a \approx 137.035999119$
+compatible with measurement value in:
+\begin{equation}
+ln137/ln(a/137) \approx (2+135/d_{e})^{2}
+\end{equation}
+meaning that \textit{the ratio $a/137$ acts as a canonical ratio}. 
+
+Considering the product of the T.A. dimensions:
+\begin{equation}
+P_d = \Pi_{k=7}^{k=0}(4 k + 2) = g_{Suz}/2^73^45^27^111^113^1
+\end{equation}
+which is a simple sub-multiple of the cardinal order of the Suzuki group, and a simple multiple of the three other sporadic groups $M_{11}, M_{12}$ and $J_2$ \cite{Aschbacher}.
+With $l_W$ the mean of the CMB and CNB Wien lengths (0.06 \%):
+\begin{equation}
+P_d \approx l_W / \lambda_e
+\end{equation}
+The pertinence of the T.A. series is thus confirmed, calling for further study.
+
+\subsection{The Atiyah and Sternheimer constants}
+    Sir Michael Atiyah was a precursor in the search for unity in Mathematics and Physics. 
+In his last work \cite{Atiyah1} the Bernoulli function $x/(1-e^{-x})$ plays a central role. \textit{This is the kernel of the thermal Planck law}. Considering the above Wien reduced constant $v = hc/kT\lambda_{Wien}$, one notes that $a \approx e^v -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa \approx 1/e$, and, to 65 ppb:
+\begin{equation}
+a \approx 44\pi - Arccos(1/e)
+\end{equation}
+a formula diffused on the web, but without indication of its connection with the Planck law.
+Moreover, $v$ appears in the normalised neutron mass $n\approx 1838.6836089(17)$ (13 ppb):
+\begin{equation}
+n^{1/3}\approx v~(\pi/2)^2  
+\end{equation}
+The small deviation is again attributed to a rationalisation of $\pi$: 3,7,16,-(1+\tau/\mu)^2$.
+
+Another central constant in the Planck law is the irrational Apery constant $\xi(3) \approx 1.20205691$. The number of photons in a sphere of radius $r$ is:
+$n_{ph}(r) = (4\pi/3) (r/l_{ph})^3$
+with $l_{ph} = (hc/k_B \theta) (16\pi \xi(3))^{-1/3}$. The photon density is $l_{ph}^{-3} \approx $ 410.872 photons/$cm^3$. The standard value is 410.7(4) ~ $cm^{-3}$  \cite{Tanabashi}. 
+
+The critical photon/baryon ratio is $ \eta_{cr} = n_{ph}(R) m_n/M$. While the number of photons exceeds the baryon number, it is the contrary for the energy densities, which is, for the CMB alone $u_{CMB} = (\pi^2/15)\hbar c /\lambdabar_{CMB}^4$. However, the energy density of the sum CMB and CNB is the later times $1 + 3 \times (7/8) (4/11)^{4/3} \approx 1.681321953$, to be compared to $u_{cr} = \rho_{cr} c^2$. One notes the dramatic relation between these two canonical ratios, with the 2 factor coming from photon polarisation (0.4 \%): 
+\begin{equation}
+\sqrt{2\eta_{cr}} \approx \frac{u_{cr}}{u_{CMB + CNB}} 
+\end{equation}
+This is an Eddington type relation, confirming that they are only three neutrinos, and ruining again the standard \textit{evolutionary} cosmology.
+%Moreover, $2\eta_{cr}$ is connected to the above Suzuki group order by $g_{Suz}/2 \eta_{cr} \approx e^w \sqrt{p} \approx (10/3) p$, to 0.3 \% and 0.2 \%. This confirms the implication of the sporadic groups, and the value of the ratio critical/real baryon number about $\sqrt{p}/2$\cite{Sanchez1}. 
+Moreover (0.08 \%):
+\begin{equation}
+E = l_{ph}^{(CMB)}/\lambdabar_e \approx (\pi a^2)^2
+\end{equation}
+This term is central in the unification number \cite{Sanchez4} (0.07 \%):
+\begin{equation}
+U = \Phi^{137} \approx (1-e^{-v})^{-1}~ (\pi a^2)^6 
+\end{equation}
+We recall that this quasi-whole number, based on the golden number $\Phi$, shows a holic character\cite{Sanchez4} (0.03, 1, 0.07 \%, 43 ppm, 0.4 \%)  :
+\begin{equation}
+U  \approx (\pi P/Dp_K)^2 \approx E^3 \approx (pH/2a)^7 \approx (\tau^2/\mu^3)^{210} \sqrt{\delta}
+\end{equation}
+with $D = 196883$ the Monster Moonshine dimension\cite{Conway}.
+    
+Atiyah introduced also the constant 
+\begin{equation}
+ \Gamma = \gamma a /\pi
+\end{equation}    
+as a simplification term. One observes: 
+\begin{equation}
+2/\delta = 2a^3/pH \approx (1/2d_{e}) ln(pH)/lna \approx lna/ln\Gamma
+\end{equation}
+With  $w = F/W$, this leads to (22 ppm):
+\begin{equation}
+a/\Gamma = \pi /\gamma  \approx w^{\delta}
+\end{equation}
+while, with $z = F/Z$ (3 ppm):
+\begin{equation}
+ 137/\Gamma \approx z^{\sqrt{f}/2}   
+\end{equation}
+where $f$ is the Bizouard strong constant precising the inverse 8.44(5) of the standard  'strong coupling constant'}\cite{Tanabashi}:
+\begin{equation}
+f = a_w/2\pi(pH)^{3/2} \approx 8.43450
+\end{equation}
+Since $wz\approx \sqre{a}$ \textit{this seems to be at the kernel of the Particle standard model}, calling for further study. 
+
+In cosmology, $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmic formula (0.3 ppm):    
+\begin{equation}
+a^{\prime} = ((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
+\end{equation}
+so confirming the $R$ value to 45 ppm.
+
+Moreover, this confirms the role of $j = 8\pi^2/ln2$, the Sternheimer scale factor\cite{Sanchez1}  (to 0.013 \%, 0.013 \%, 0.046 \%):
+\begin{equation}
+j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
+\end{equation}
+The Titts group order $13\cdot 2^{11}3^35^2$ \cite{Titts}  completes the biophysics relations involving central temperatures \cite{Sanchez1}: 
+\begin{equation}
+j\approx T_{mam}/T_{CMB} \approx O_T / W
+\end{equation}
+\begin{equation}
+10^2\approx T_{H_2O}/T_{CMB} \approx O_T / Z
+\end{equation}
+The pertinence of $O_T$ is confirmed by the 2 ppb relation, where 71 is the biggest prime in the Monster order: 
+\begin{equation}
+2\times 137^2 + 21 = 23^2\times 71 \approx 3\times 137 d_e O_T/D    
+\end{equation}
+
+
+The mammal wavelength enters (1\%)
+\begin{equation}
+(Rl_P)^{1/2}\approx hc/kT_{mam}
+\end{equation}
+It is known that the reduced series $8k^{\prime}+2$ gives for $k^{\prime}$ = 1 and 3 the canonical values 10 and 26. Now the value $k^{\prime}$ = 2, d = 18 is at last interpreted: \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension d = 16. Moreover, to 0.1\%, the water triple point enters (0.1 and 1 \%):
+\begin{equation}
+(R^{\prime}l_P)^{1/2}\approx hc/k\theta_{H_2O}
+\end{equation}
+\begin{equation}
+\theta_{H_2}\times \theta_{O_2} \approx \theta_{H_2O} \times \theta_{CMB} 
+\end{equation}
+This shows that Chemistry is also involved \cite{Sanchez1}.
+
+The study of the 22 amino-acids \cite{Sanchez1} has shown that $j$ is also a computation base. Indeed, to 2\%: $j^{22} \approx 3 P^2 $ and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $ where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
+
+
+
+\subsection{The ubiquity of $a^{a}$}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+
+Since 137 is a number of parameters, it must be interpreted as a dimension i.e. a privileged exponent. However, from the Computation Hypothesis, $a$ must be an optimal base also. \textit{So the term $a^a$ must be central}.
+    
+Indeed, apart a $\pi$ factor, $a^a$ is the Grandcosmos volume with unit length the Hydrogen radius, to 0.4 and 0.5 \%:
+\begin{equation}
+(4\pi/3)(R_{GC}/r_H)^3 \approx a^a/\pi \approx 3(1/ln2)^{\sqrt{pH}}
+\end{equation}
+\textit{Note that the ln2 factor involves the information theory}. This relation is tied to the following property of the above Unification factor (0.06 and 0.1 \%):
+\begin{equation}
+U = \Phi^{137}\approx a^{p/a}\approx (1/ln2)^{pn/137^2}
+\end{equation}
+Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale (306 notes) and to the operational definition of $e$ \cite{Sanchez1}. Hence,  we look here for its manifestations in classical mathematics. 
+
+The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
+starting from $N = 4 = u_{3} + 1/u_{3}$, with $u_{3} = \sqrt{3} + 2$. The later is a special case of Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$, whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{n})}$, and for n = 9:
+\begin{equation}
+u_{3}^{(2^9)} \approx (2(137^{2} + 48))^{64} \approx a^{a}
+\end{equation}
+defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role.
+
+Also, with the Pell-Fermat generator $u_{1}
+ = 1 + \sqrt{2}$:
+\begin{equation}
+a^{a} \approx u_1^{3\times(2^{8}-1)}
+\end{equation}
+which defines $a$ to 0.3 ppm. So the number $a$ establishes a connection between $u_{1}$ and $u_{3}$, two of the
+simplest arithmetic's generators. This opens a \textit{new research in pure mathematics}. %Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \approx 140^2 + 1 \approx a(a+6)$ to 4 ppm. 
+
+
+
+\subsection{The intervention of Sporadic Groups}
+
+One observes, to 30 ppm, 0.5 \% and 0.05 \%:
+\begin{equation}
+O_{M} \approx  (lnlnlnO_{M})^{2(136 + d_e)} \approx (\pi/2)^{2a^{\prime}d_e^2} \approx (F/af)^{20}
+\end{equation}
+Moreover (0.036 \% and 0.038 \%):
+\begin{equation}
+O_{M}^{1/10} \approx 495^2 \approx f(\gamma \Gamma) 
+\end{equation}
+where $495 = g_0/16$, implying the order $g_0$ of the smallest  sporadic group (Mattieu) order $M_{11}$. Note that 495 is a unity less than the Green-Schwarz string dimension 496, the third perfect number, after 6 and 28. The precision 1.7 ppm of $f(\gamma \Gamma)\approx 495^2 (a/137) $ suggests that the Higgs ratio is $495^2$,
+ corresponding to 125.175 GeV (Fig 1 and Table 1).
+ %Also, in the Topological Axis (Fig. 1), it corresponds with $k \approx \pi $, and n $\approx \gamma \Gamma \approx (4\pi + 2) (p/d_e p_0)^2$, to 30 ppb.
+
+The product of the 6 pariah group orders verifies (7 ppm):
+\begin{equation}
+\Pi_{pariah} \approx (F/a)^{20}/d_e^2
+\end{equation}
+thus, the above cosmic Tifft ratio $F/a$ (section 4.4) is directly tied to the six pariah groups. This establishes a connection between the six pariah groups and the Monster group (0.7 \%):
+\begin{equation}
+\Pi_{pariah}/O_M\approx f^{20}
+\end{equation}
+These six pariah groups are not identified to form any family. By contrast, the 20 normal sporadic groups form the so-called \textit {happy family} which is closely related to the Monster. The product of the 20 groups of the happy family shows, to 0.015\%, 1\% and 0.45 \%:
+\begin{equation}
+\Pi_{happy} \approx \delta \cdot a^{a} \approx (j/495)^2~ \Gamma^{210}
+\end{equation}
+where $j/495$ is close to the weak mixing angle 0.23116(12) \cite{Tanabashi}, to 0.45 \%. This confirms the above Complete Holic Principle, and the computation role of $\Gamma$. Moreover, to 2\%: $a^a \approx \Gamma^{209}$. From the order of the Baby-Monster $O_B\approx\Gamma^{24}$, and $209 = 137 + 3\times 24$ (1 and 2 \%):
+\begin{equation}
+O_B \approx \Gamma^{24} \approx  (a/\Gamma)^{a/3}
+\end{equation}
+ where $a/\Gamma = \pi/\gamma $ is the above canonical Atiyah ratio. 
+
+The total product of the 26 sporadic orders $\Pi_{26}$ verifies (0.27 \%):
+\begin{equation}
+\Pi_{26} \approx (9/2)(R_{GC}/\lambdabar_M )^2
+\end{equation}
+Now $\Pi_{26}$ is close to the holic term $e^{4 \times 210}$, whose $a^{th}$ root is very remarkable (65ppm, 98 ppm, 5 ppb):
+\begin{equation}
+e^{4 \times 210/a} \approx 2e^{2e} \approx H/4 \approx 26 \times (2 \times 26 + 1)/3
+\end{equation}
+The ppb range precision of the last term means clearly that a rationalization of $e^{2e}$ is occurring, where the canonical dimension 26 plays a central role.
+
+Note that $p/g_0$ is close to the above weak mixing angle (0.3 \%. This ratios appears as calculation base in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, and 1 \%:
+\begin{equation}
+O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137}
+\end{equation}
+confirming the central role of the weak mixing angle.  The photon number in the visible universe is (0.1 \% and 0.2 \%):
+\begin{equation}
+n_{ph} \approx (3/\pi)~ e^{e^6/2} \approx \sqrt{\delta}~ O_M O_B
+\end{equation}
+With $N_{ph}$ the photon number in the Grandcosmos, and $N_n = M_{GC}/m_n$ the equivalent neutron number in the Grandcosmos, one observes (3 \%, 0.5 \%):
+\begin{equation}
+\sqrt{N_{ph}N_n} \approx e^{n/3} \approx (O_M^3/U)^2  
+\end{equation}
+confirming that the Grandcosmos is the external thermostat of the visible Universe. This is tied to (3 \%, 0.08\%, 2.5\%,1\%):
+\begin{equation}
+e^{137e}\approx Ue^{n/6}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} 
+\end{equation}
+With the tachyonic ratio $V = R_{GC}/R = C/c$, the orders of the two giant sporadic groups enter (0.2 \%, 0.1 \% and 79 ppm):
+\begin{equation}
+V \approx 44 \pi N_{S} \approx (a/\pi) O_M D \approx (a/\pi) O_B P a^{3/2}
+\end{equation}
+where $N_S = 2^{65} \cdot 3^{41} \cdot 5^{28}$ is the Systema number\cite{Moulin}.
+
+The corrected Eddington's number $N_{Ed}^{\prime} = a \cdot 2^{256}$, where 136 is replaced by $a$, shows (4.5 ppm and 0.03 \%):
+\begin{equation}
+N_{Ed}^{\prime} \approx 6 \cdot 137PO_M \approx (3/4) a p a_w (V/O_M)^9
+\end{equation}
+
+With the 4D area $ s_4 = 2\pi^2 a^3$, the holic reduction  
+\begin{equation}
+(R/\lambdabar_e)^7 \approx (3/2) O_M^5 \approx s_4^{35} 
+\end{equation}
+implies $O_M^{1/7} \approx s_a^{(4)}$. Indeed, the Monster appears to be close to the seventh power of the pariah group $J_3$ (0.2 ppm): 
+\begin{equation}
+O_M \approx d_e J_3^7 \sqrt{p/p_0}
+\end{equation}
+\textit{The above relations proves that physics establish unexpected bridges between sporadic groups, including the Titts one}.
+
+With $\delta_K = p_K^2/a^3 $, and the symetrised Planck area $(l_P^{\prime})^2 = \sqrt{h \hbar} G/c^3$ (11, -11 ppm, and 0.04 \%):
+\begin{equation}
+(1/2\pi^{3/2})(R_{GC}/l_P^{\prime})^4 \approx (\delta_K O_M )^9 e^{1/2a} \approx  \mu^{210}/4\pi \approx \tau^{137}
+\end{equation}
+The existence of a Final Theory based on the Holic Principle (section 6), the Grandcosmos and the Koide-Sanchez constant cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}
+
+
 
 
 
