--- a/test.tex
+++ b/test.tex
@@ -660,12 +660,12 @@ Since any electrical charge is a whole multiple of unitary charge $q$ (a relativ
 
 However, theorists focused on one property only, the appearance of its fifth power in the Hydrogen hyper-fine spectra, calling its inverse $\alpha$, the `fine-structure constant'. 
 
-Many researchers looked for the mathematical origin of $a$. In quantum electrodynamics,$\sqrt{a}$ is connected with the Electron magnetic abnormal factor, which is very precisely measured\cite{Tanabashi}: $$d_e \approx 1.00115965218076(27)$$
-It is readily seen that $\sqrt{a} \approx exp(\pi/2)^2$. From $i = e^{(i\pi /2)}$, this writes $i^{-lni}$ and the study of deviation leads to, with $a_e = a/d_e$ (29 ppb):
-\begin{equation}
- i^{-lni}/\sqtr{d_e} \approx (\sqrt{a_e} + 1/\sqrt{a_e})^2    
-\end{equation}
-The slight deviation is not a valid objection, since \textit{Nature must use rational approximations for $\pi$}. Indeed, the fractional development for the corresponding $\pi$ value is 3,7,15,1,$(\(\tau/\mu)^2$, with $\mu$ and $\tau$ the normalised masses of the heavy leptons.
+%Many researchers looked for the mathematical origin of $a$. In quantum electrodynamics,$\sqrt{a}$ is connected with the Electron magnetic abnormal factor, which is very precisely measured\cite{Tanabashi}: $$d_e \approx 1.00115965218076(27)$$
+%It is readily seen that $\sqrt{a} \approx exp(\pi/2)^2$. From $i = e^{(i\pi /2)}$, this writes $i^{-lni}$ and the study of deviation leads to, with $a_e = a/d_e$ (29 ppb):
+%\begin{equation}
+ %i^{-lni}/\sqtr{d_e} \approx (\sqrt{a_e} + 1/\sqrt{a_e})^2    
+%\end{equation}
+%The slight deviation is not a valid objection, since \textit{Nature must use rational approximations for $\pi$}. Indeed, the fractional development for the corresponding $\pi$ value is 3,7,15,1,$(\(\tau/\mu)^2$, with $\mu$ and $\tau$ the normalised masses of the heavy leptons.
 
 The standard model is unable to explain the three families of particles. Thus, the study of the muon and tau mass ratios is crucial. One observes (1 ppm, 56 ppm, 0.06 \%):
 \begin{equation}
