--- a/test.tex
+++ b/test.tex
@@ -735,7 +735,7 @@ Moreover, $v$ appears in the normalised neutron mass $n\approx 1838.6836089(17)$
 \begin{equation}
 n^{1/3}\approx v~(\pi/2)^2  
 \end{equation}
-The small deviation is again attributed to a rationalisation of $\pi$: 3,7,16,-(1+\tau/\mu)^2$.
+The small deviation is again attributed to a rationalisation of $\pi$: 3,7,16,-(1+$\tau/\mu)^2$.
 
 Another central constant in the Planck law is the irrational Apery constant $\xi(3) \approx 1.20205691$. The number of photons in a sphere of radius $r$ is:
 $n_{ph}(r) = (4\pi/3) (r/l_{ph})^3$
