--- a/test.tex
+++ b/test.tex
@@ -777,11 +777,11 @@ while, with $z = F/Z$ (3 ppm):
 \begin{equation}
  137/\Gamma \approx z^{\sqrt{f}/2}   
 \end{equation}
-where $f$ is the Bizouard strong constant precising the inverse 8.44(5) of the standard  'strong coupling constant'}\cite{Tanabashi}:
+where $f$ is the Bizouard strong constant precising the inverse 8.44(5) of the standard 'strong coupling constant'}\cite{Tanabashi}:
 \begin{equation}
-f = a_w/2\pi(pH)^{3/2} \approx 8.43450
+f = a_w/2\pi (pH)^{3/2} \approx 8.43450
 \end{equation}
-Since $wz\approx \sqre{a}$ \textit{this seems to be at the kernel of the Particle standard model}, calling for further study. 
+Since $wz\approx \sqrt{a}$ \textit{this seems to be at the kernel of the Particle standard model}, calling for further study. 
 
 In cosmology, $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmic formula (0.3 ppm):    
 \begin{equation}
