--- a/test.tex
+++ b/test.tex
@@ -777,7 +777,7 @@ while, with $z = F/Z$ (3 ppm):
 \begin{equation}
  137/\Gamma \approx z^{\sqrt{f}/2}   
 \end{equation}
-where $f$ is the Bizouard strong constant precising the inverse 8.44(5) of the standard 'strong coupling constant'}\cite{Tanabashi}:
+where $f$ is the Bizouard strong constant precising the inverse 8.44(5) of the standard 'strong coupling constant'\cite{Tanabashi}:
 \begin{equation}
 f = a_w/2\pi (pH)^{3/2} \approx 8.43450
 \end{equation}
