--- a/test.tex
+++ b/test.tex
@@ -647,6 +647,11 @@ This precises the relation $a_w/WZ \approx \sqrt{a}$ known (0.1 \%) in Particle 
 Thus, in first approximation $(e^{-1/4a} \approx ~0.036 ~\%)$, the square root of the Monster order is the ratio of the Rydbergh wavelength to the Planck length.
 
 
+
+
+
+
+
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The role of Intermediary Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
@@ -942,205 +947,163 @@ The existence of a Final Theory based on the Holic Principle (section 6), the Gr
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-\section{The role of Intermediary Mathematical Constants}
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-
-\subsection{The Eddington's constant 137}
-
-The initial Eddington's proposal for $a$ was the whole number 136, being the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a prime number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a singular prime in the series of the maximal primes appearing in the numerator of the harmonic
-series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed: $137 = 11^{2} + 4^{2}$, while, as seen above: $11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$
-
-Since Riemann series are tied to the prime number distribution, it seemss odd and incredible that mathematicians
-have not point out the primes appearing in the harmonic series since it is the single pole. It seems
-that the basic precept `all occurs in the pole` was forgotten in this case. 
-
-As ancient Egyptians used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
-$S_{5} = 137/60$. Indeed it appears in the Ptolemaic approximation for $\pi$: $\pi_{Pt} = 377/120 = 2 +  S_{5}/2$.
-
-Recall that the electrical constant $a$ characterizes the force $$F =\hbar c/al^{2}$$ between two l-distant
-elementary charges, where $a$ appears central in Atomic Physics and in many fine-tuning relations \cite{Carr}. It is
-misleading that physicists focused on one property only, the appearance of its fifth power in the
-Hydrogen hyper-fine spectra, calling its inverse $\alpha$, the `fine-structure constant`. It is strange also that
-Eddington's Theory was rejected as soon as $a$ appeared to deviate from 137. Indeed, the
-following shows that 137 plays a central role in fine-tuning analysis. 
-
-One may interpret 137 + 1 as
-the sum of the numbers of dimensions in the Topological Axis \cite{Sanchez1}, taking into account the double
-point (H atom-Pion couple) for the superstring value n = 10, and the remarkable sum:
-\begin{equation}
-\sum_{k=7}^{k=0}(2 + 4 k ) = 2^{7}
-\end{equation}
-So $137 = 2^{7} - 1 + 3 + 7$ the Combinatorial Hierarchy form \cite{Sanchez1}. But this appears also as 137 = 135 + 2,
-with the dimension 2 of the String patent. In particular, one obtains the value $a \approx 137.035999119$
-compatible with measurement $a \approx 137.035999139(31)$ in:
-\begin{equation}
-ln137/ln(a/137) \approx (2+135/d_{e})^{2}
-\end{equation}
-meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precising \cite{Sanchez1} the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation base in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb:
-$$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 \approx P^4 (2/3)^a (p/p_0)^2 $$
-proving that the base 3, \textit{the optimal whole number base}, is also used by the Cosmos. Also $O_B$, the cardinal order of the Baby Monster plays a role (as confirmed below). 
-Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{\prime}/\lambdabar_e \approx 27^{27}$, with $27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
-$ a/(a-1) \approx 3^{1/150} $. Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddington}.
-
-\subsection{The Atiyah and Sternheimer constants}
-    Sir Michael Atiyah was a precursor in the search for unity in Mathematics and Physics. 
-In his last work \cite{Atiyah1} the Bernoulli function $x/(1-e^{-x})$ plays a central role. This is the kernel of the thermal Planck law. Indeed, considering the Wien reduced constant $w = hc/kT\lambda_{Wien} = 5 (1-e^{-w}) \approx 4.965114245$, one notes that $a \approx e^w -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa \approx 1/e$, and, to 65 ppb:
-\begin{equation}
-a \approx 44\pi - Arccos(1/e)
-\end{equation}
-a formula largely diffused on the web, but without indication of its origin.    
-    
-    Atiyah introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmic formula (0.3 ppm):    
-\begin{equation}
-a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
-\end{equation}
-so confirming the $R$ value to 45 ppm.
-
-Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\pi^2/ln2$ (to 0.013 \%, 0.013 \% and 0.046 \%):
-\begin{equation}
-j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
-\end{equation}
-It was noted \cite{Sanchez1} that $$j\approx T_{mam}/T_{CMB}$$ the ratio between mammal and cosmic temperatures, and that the mammal wavelength enters (1\%) $$(Rl_P)^{1/2}\approx hc/kT_{mam}$$ So, \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension $n = 16$. Moreover, to 0.1\%, the water triple point enters: $$(R^{\prime}l_P)^{1/2}\approx hc/kT_{H2O}$$ which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved \cite{Sanchez1}.
-
-The study of the 22 amino-acids \cite{Sanchez1} has shown that $j$ is also a computation base. Indeed, to 2\%: $j^{22} \approx 3 P^2 $ and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $ where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
-
-The last equation means the implication of $B = e^{e^{\pi}}$, the double exponential of $\pi$, in the ultimate theory. Indeed, to 0.3 ppm and 0.03 \% :
-\begin{equation}
-(\lambdabar_{CMB}/\lambdabar_e)^3 \approx F^5/6 \approx B^3/a
-\end{equation}
-It is also exhibited in the following holographic relation:
-\begin{equation}
-(4\pi/3) B^3 \approx \pi(F^3/a)^2,
-\end{equation}
-while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters the 'forgotten' electromagnetic power $E_e^2/\hbar A$, in the Hydrogen atom, with $E_e = m_ec^2$.
-Note that, to 10 ppm and 2 ppm:
-$
-(H/n)^2(F^2/B)^3 \approx (4/3) a^2 \approx W/2\pi \beta^4
-$
-where $W$ is the W boson-Electron mass ratio. Now, to 30 ppm and 20 ppm :  
-\begin{equation}
- (F^3/a)^2 \approx (P/FH^2)^3  \approx  (a/137)(4\pi/3)(F^2/p^{1/2})^3 
-\end{equation}
-%Thus, the term $F^3/a$ seems special. More precisely, with the reduced Hydrogen radius $a^{\prime} = aH/p$, to %0.3ppm and 0.3 \%:
-%\begin{equation}
-%\sqrt{\beta} F^3/a^{\prime} \approx (e/3)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
-%\end{equation}
-%confirming that $j$ and $\Gamma$ are generalised dimension, i.e. are privileged exponents, calling for further %study.
-
-%Note that (Fig 1.):
-%\begin{equation}
-%m_{e} c^{2} f(\gamma\Gamma) \approx 125.2~ GeV
-%\end{equation}
-%is close to the Higgs Boson energy, 
-%The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group %radius, and $c$ times the Milankovich period. One observes also, to 0.16 \%, 1.8 ppm and 10 ppb:
-%$$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2 \approx (16/ln2)d_e \beta p/p_0$$
-%meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n \approx %\Gamma$.
-%One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
-%$$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^{1/2} F^{10/3\sqrt{a}}$$
-%(1.8 ppm), confirming Atiyah's symmetry between $\pi$ and $a$, the role of the dimension 496, and the pertinence %of the %$20^{th}$ power of $F$, corresponding to the 20 normal amino-acids.  
-
-\subsection{The ubiquity of $a^{a}$}
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-
-From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 being a number of parameters, it must be interpreted as a dimension, a privileged exponent. \textit{So the term $a^a$ must be central}.
-    
-Indeed, $a^a$, apart a $\pi$ factor, is the Grandcosmos volume with unit length the Hydrogen radius, to 0.4 and 0.5 \%:
-\begin{equation}
-(4\pi/3)(R_{GC}/r_H)^3 \approx a^a/\pi \approx 3(1/ln2)^{\sqrt{pH}}
-\end{equation}
-Note that the ln2 factor involves information theory.
-Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale (306 notes) and to the operational definition of $e$ \cite{Sanchez1}. Thus it seems interesting here to look for its manifestations in classical mathematics. 
-
-The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
-starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$, which entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{n})}$, and for n = 9:
-\begin{equation}
-u_{3}^{2^9} \approx (2(137^{2} + 48))^{64} \approx a^{a}
-\end{equation}
-defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role.
-
-Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
-\begin{equation}
-a^{a} \approx u_1^{3\times(2^{8}-1)}
-\end{equation}
-which defines $a$ to 0.3 ppm. So the number $a$ establishes a connection between $u_{1}$ and $u_{3}$, two of the
-simplest arithmetic's generators. This opens a \textit{new research in pure mathematics}. Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \approx 140^2 + 1 \approx a(a+6)$ to 4 ppm. 
-
-%So, this comes back to the antique problem of the rationalisation of $\sqrt{2}$. Its corresponding value shows a $%8^{th}$ fractional term very close to $\sqrt{5}$, so leading to $\sqrt{2}_a \approx N_{a}/D_{a}$, with $ N_{a} %= %239 \sqrt{5} + 99 \approx \Gamma^{2}
-%\approx O_B^{1/12} $ and $ D_{a} = 13^2 \sqrt{5} + 70 \approx O_M^{3/61}$,
-%so connecting $O_M$ and $O_B$, since $61/2 \approx F/a^{2}$ to 0.04 \%, and introducing the next section.
-
-\subsection{The intervention of Sporadic Groups}
-
-With the tachyonic ratio $U = R_{GC}/R = C/c$, the cardinal orders of the two giant sporadic groups enter (63 and 2 ppm)
-\begin{equation}
-\pi U/a \approx O_M D n/H \approx O_B P a^{3/2}
-\end{equation}
-where $D = 196883$ is the Moonshine dimension of the Monster group. The corrected Eddington's number $N_{Ed}^{\prime} = a \cdot 2^{256}$, replacing 136 by $a$ shows (4.5 ppm and 0.03 \%):
-\begin{equation}
-N_{Ed}^{\prime} \approx 6 \cdot 137PO_M \approx (3/4) a p a_w (U/O_M)^9
-\end{equation}
-With the heavy leptons parameters (section 9.5), to 24 ppm and 0.15\%:
-\begin{equation}
-\tau lna/\mu ln O_M \approx 2/3 \approx lnP/O_B
-\end{equation}
-The above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
-\begin{equation}
-e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}
-\end{equation}
-implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Brout-Englert-Higgs boson in the Topological Axis (Fig.1). The above Bizouard constant confirms its computation role, and the above relation implies, to 61 ppm: $ lnf\approx \pi e/4d_e$.
-The following combination of three main dimensionless parameters is remarkable, to 0.05 \% and 0.13 \%:
-\begin{equation}
-F/af \approx 496\approx j^{\delta}
-\end{equation}
-Also, to 8 ppm: $\ln(O_{M}) /2\ln\ln\ln\ln(O_{M}) \approx 137$ and the product of the 20 groups of the happy family tied
-to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
-\begin{equation}
-\Pi_{happy} \approx \delta \cdot a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}
-\end{equation}
-This confirms the above Complete Holic Principle, and the computation role of $\Gamma$ is moreover confirmed by, to 2\%: $a^a \approx \Gamma^{209}$ and the order of the Baby-Monster $O_B\approx\Gamma^{24}$. From $209 = 137 + 3\times 24$:
-\begin{equation}
-O_B \approx (a/\Gamma)^{a/3}
-\end{equation}
-where $a/\Gamma = \pi/\gamma $ is the canonical Atiyah ratio.
-
-The total product of the 26 sporadic orders $\Pi_{26}$ verifies, with $n$ the neutron/electron mass ratio, to 1.8 ppm:
-$$ \Pi_{26} \approx (9np_0/2p^2)(R_{GC}/\lambdabar_M )$$
-Now $\Pi_{26}$ is close to $e^{4 \times 210}$, whose $a^{th}$ root is again very remarkable (65ppm, 98 ppm, 5 ppb):
-\begin{equation}
-e^{4 \times 210/a} \approx 2e^{2e} \approx H/4 \approx 26 \times (2 \times 26 + 1)/3
-\end{equation}
-The ppb range precision of the last term means clearly that a rationalization of $e^{2e}$ is occurring, where the canonical dimension 26 plays a central role.
-
-Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.7\%:
-\begin{equation}
-O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx \sqrt{2}(e496^2)^{15}
-\end{equation}
-confirming the central role of 496. Note also (0.1 \%) that $O_MO_B \approx  n_{ph}/\delta^{1/2}$, where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. 
-
-From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$, and more precisely (22 ppm) with the Higgs ratio $s$ defined in section 9.4: $\sqrt{s}/j \approx (ae^e/\Gamma)^{1/3}$.
-
-
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The fine-tuning with basic mathematical constants}
 \markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+
+We look here for relations involving basic mathematical constants, noting firstly that, to 6.5 ppm:
+$p \approx \Gamma (\pi e)^2$. 
+
+
+
+\subsection {The optimal calculation base $e$ confirmed}
+
+The electron magnetic moment $2d_e$ appears in (0.7 ppm):
+\begin{equation}
+a/\Gamma = \pi/\gamma \approx 2d_e \cdot e ~(p_0/p)^2 
+\end{equation}
+The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
+\begin{equation}
+f(k = e^{2}) = exp(2^{e^{2+1/2}}) \approx exp(e^{2e}+e^{2})
+\end{equation}
+where the supplementary term $exp(e^2)$ is close to $a^{3/2}$. Note the following properties of the 'economic number' $e^{e^e}$, to 
+0.4 \%, 6 ppm and 0.8 ppm:
+\begin{equation}
+e^{e^e}\approx (lnp)^{lnp} \approx 137 (e^{e})^3 \approx e^e a \sqrt{pH} (p/p_0)^2 
+\end{equation}
+With $a_1 = a-1$ (8 ppm, 0.2 ppm, and 0.05 \%):
+\begin{equation}
+e^{e^e}/a_1^2 \approx 4 ln P \approx a ln(9/2) \approx 5^{2^7}
+\end{equation}
+showing the role of musical bases 2, 3 and 5. Note that the Topological Axis terminal term $e^2$ is the limit of the following musical series:
+$$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
+a series converging much rapidly than the classical $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale.
+Note that, to 0.6 \% and 0.03 \%:
+\begin{equation}
+R/\lambdabar_e \approx 2^{2^7}
+\end{equation}
+\begin{equation}
+R^{\prime}/\lambdabar_e \approx (3^3)^{(3^3)}
+\end{equation}
+
+The canonical ratio $R_{GC}/\lambdabar_M = 2P^9/a^6pH $ confirms the Full Holographic Principle, to 0.04 \%:
+\begin{equation}
+R_{GC}/\lambdabar_M  \approx (137e/a)^{2 \cdot 210}  
+\end{equation}
+exhibiting (0.3 ppm): $ (a/137)^{420} \approx (137 - 3)/120 $  
+with $137 - 3 = 7 + 127$ showing the Combinatorial Hierarchy terms\cite{Sanchez1}. 
+
+
+
+
+
+
+
+
+\subsection {The Lenz-Wyler's Formula}
+Wyler published a value approaching $a$ to 0.6 ppm and confirmed the pertinence of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5} \approx p$ to 18.824 ppm.
+
+The Lenz-Wyler formula is the product of the area by the volume of a 3D cube with side $\pi$. If one considers a 3D cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, whose power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $ shows the neutron/electron mass ratio $n$. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $.  
+Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
+$$R_{GC}/\lambdabar_e \approx q\times 5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
+Since $R/\lambdabar_e \approx 2^{128}$, \textit{ 
+the factorisation of 6 leads to a natural Universe- Grandcosmos partition}, and to the following approximation for the tachyonic celerity ratio (0.01\%) 
+$$ U = C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide-Sanchez constant (see section 9.5). This confirms the role of the correspondence quark up = 5 and \textit{quark d = 6 with a double structure}. This elimination of $q$ leads to (2.6 \%):
+$(R_{GC}/\lambdabar_e)^3 \approx (uud)^{137}$. 
+
+It is an example of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encountered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out. Another example signals a general misconception: the coherence of the stimulated emission in a laser is a \textit{global effect} in a homogeneous media (atomic coherence). 
+
+
+
+
+
+
+
+
+
+\subsection {The Archimedes constant $\pi$ as a calculation base}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
+
+The value of the Topological Function for the main String
+ dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f(26) \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1ppm:
+\begin{equation} 
+(p/n) (R/\lambdabar_{e})^{2} \approx (f(26)/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}
+\end{equation}
+The corresponding approximation $\pi_R$ of $\pi$ shows the fractional series 3, 7, 16, -u, with $u \approx
+2 \times 137$, confirming again the Rationalization Hypothesis of section 3. This leads to the rational value
+$\pi_{R} = (355u-22)/(113u-7)$. This corresponds to the above $G$ value to 10 ppb accuracy.
+Since $(R/\lambdabar_{e})^{2} \approx 2^{256} $, this illustrates the following musical relation involving again 137: $2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$. The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}. Whole powers of $\pi$ appears in the even order Riemann series, and in:
+$a \approx 4\pi^{3} + \pi^{2} + \pi $ (Reilly formula, 2 ppm), while $a \approx \pi^{9/2}2^{-1/3}$ (8 ppm). Moreover, with $P = \lambdabar_e/ l_P$ (0.3 and 0.07 \%):
+\begin{equation}
+P^3 \approx \pi^{a-2} \approx (2\pi R/\lambdabar_e)(2 \pi l_K/r_e) 
+\end{equation}
+confirming the Planck volume and the Kotov length.
+
+
+
+
+
+
+
+
+\subsection {The Four Forces Connection in ppb Fine-Tuning}
+
+The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with extension to strong nuclear force in the Grand Unification Theory (GUT), but without any synthesis with gravitational force. However, the Topological Axis shows clearly that GUT with $1O^{16}$ GeV gauge boson seems confirmed. Very precisely, in section 4.2, it is proven that the CCO oscillation reveals a symmetry between the electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$. 
+
+ With the Atiyah constant $\Gamma = \gamma a/\pi$ (section 8.2), inside the 0.5 ppm measurement precision:  
+ $a_{w} = F^2 = (137 \times 2 \Gamma)^{3}$. Now $a_{w}$ is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$:    
+\begin{equation}
+\lambdabar_e/l_{eF} \approx 137 \times 2\Gamma
+\end{equation}
+leading to $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$. Moreover:
+\begin{equation}
+aF/\sqrt(pH) = 2\pi afpH/F \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
+\end{equation}
+where $\mu$ is the Muon/Electron mass ratio, \textit{inside its 20 ppb undetermination}, so proposing the value:
+\begin{equation}
+\mu \approx 206.7682869
+\end{equation}
+Note that $4n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
+the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
+development of $\pi$ is to this date an unsolved problem, \textit{this confirms that current mathematics is
+incomplete and that Nature uses rational approximations of $\pi$}.
+
+These relations show a dual form, the first one without any numerical factor:
+\begin{equation}
+ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
+\end{equation}
+Now,
+ as was recalled above, the exponents represent the number of
+dimensions. So, this represents a dimensional reduction, eliminating 137, from 9D and 6D to
+3D, which could be associated with the super-string theory, where the equations are coherent only if space
+has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
+
+
+The following weak boson ratios $W$ and $Z$ match (Eq.1):
+$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$
+\textit{in the ppb range}: 
+\begin{equation}
+W \approx 137^{2} \Gamma / 3d_{e}
+\end{equation}
+\begin{equation}
+Z \approx ap^{2} \pi^{4} / 137 d_{e} n
+\end{equation}
+\textit{The ultimate theory must explain these ppb relations.}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1174,6 +1137,24 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
   \label{tab:table}
 \end{table*}
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+\section{The fine-tuning with basic mathematical constants}
+\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 \subsection {The heavy leptons fine-tuning}
 The standard model is unable to explain why there are three famillies of particles. Thus, the study of the muon and tau mass ratios is crucial. Now, the following Koide relation \cite{Koide}, which has a mathematical justification in term of circulant matrix \cite{Brannen}, correctly predicted $\tau$ at an epoch (around 2000) during which its measurement was false to 3 $\sigma$. It writes:
