--- a/test.tex
+++ b/test.tex
@@ -665,8 +665,8 @@ Since any electrical charge is a whole multiple of unitary charge $q$ (a relativ
 
 However, theorists focused on one property only, the appearance of its fifth power in the Hydrogen hyper-fine spectra, calling its inverse $\alpha$, the `fine-structure constant'. 
 
-%Many researchers looked for the mathematical origin of $a$. In quantum electrodynamics,$\sqrt{a}$ is connected with the Electron magnetic abnormal factor, which is very precisely measured\cite{Tanabashi}: $$d_e \approx 1.00115965218076(27)$$
-%It is readily seen that $\sqrt{a} \approx exp(\pi/2)^2$. From $i = e^{(i\pi /2)}$, this writes $i^{-lni}$ and the study of deviation leads to, with $a_e = a/d_e$ (29 ppb):
+Many researchers looked for the mathematical origin of $a$. In quantum electrodynamics, $\sqrt{a}$ is connected with the Electron magnetic abnormal factor, which is very precisely measured\cite{Tanabashi}: $$d_e \approx 1.00115965218076(27)$$
+It is readily seen that $\sqrt{a} \approx exp(\pi /2)^2$. From $i = e^{(i\pi /2)}$, this writes $i^{-lni}$ and the study of deviation leads to, with $a_e = a/d_e$ (29 ppb):
 %\begin{equation}
  %i^{-lni}/\sqtr{d_e} \approx (\sqrt{a_e} + 1/\sqrt{a_e})^2    
 %\end{equation}
