--- a/test.tex
+++ b/test.tex
@@ -670,7 +670,7 @@ It is readily seen that $\sqrt{a} \approx exp(\pi /2)^2$. From $i = e^{(i\pi /2)
 \begin{equation}
 i^{-lni}/\sqrt{d_e} \approx (\sqrt{a_e} + 1/\sqrt{a_e})^2    
 \end{equation}
-The slight deviation is not a valid objection, since \textit{Nature must use rational approximations for $\pi$}. Indeed, the fractional development for the corresponding $\pi$ value is 3,7,15,1,$(\(\tau/\mu)^2$, with $\mu$ and $\tau$ the normalised masses of the heavy leptons.
+The slight deviation is not a valid objection, since \textit{Nature must use rational approximations for} $\pi$. Indeed, the fractional development for the corresponding $\pi$ value is 3,7,15,1,$(\tau/\mu)^2$, with $\mu$ and $\tau$ the normalised masses of the heavy leptons.
 
 The standard model is unable to explain the three families of particles. Thus, the study of the muon and tau mass ratios is crucial. One observes (1 ppm, 56 ppm, 0.06 \%):
 \begin{equation}
